--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-	"name": "dumon",
-	"version": "0.0.1",
+	"name": "mahiue",
+	"version": "0.0.2",
 	"dependencies": {
-	  "express": "2.5.2"
-	}
+	  "express": "3.x",
+      "jade": "*"
+	},
+    "devDependencies": {
+      "coffee-script": "*"
+    }
 }
